# todo_list_hexagon

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh
.sqlx/: query-30307669ca878f39e3b4a30c57542d8a27ab488ccf06e7d968b530857c1ac568.json  query-681b72198a5a17626962fecf62113e4cb3e27d6e3ae1ce8ac135e01f76dad599.json  query-9dfcb367cd03b43ab6821c6264b25af1fa22162881394a9a55da73a82ff90d55.json  query-bd9ed7bd21646afc98db9d1c338c3a48def210e77f0ea8044eddd63d278bd547.json  query-feb3d19949c3c8e60294b6575c00c16ff6497712e2b97ae6669edf36de3c5634.json
domain/: Cargo.toml
domain/src/: app_errors.rs  input_ports.rs  lib.rs  models.rs  output_ports.rs  use_case.rs
domain/src/input_ports/: task_command.rs  task_query.rs
domain/src/models/: task.rs  task_command.rs  task_query.rs  utils.rs
domain/src/output_ports/: task_command.rs  task_query.rs
input_adapter/: Cargo.toml
input_adapter/src/: http_api.rs  lib.rs
input_adapter/src/http_api/: controller.rs  errors.rs  models.rs  router.rs  server.rs
input_adapter/src/http_api/models/: create_input.rs  create_output.rs  get_one_output.rs  list_output.rs  update_input.rs
migrations/: 20250908152442_tasks.up.sql
output_adapter/: Cargo.toml
output_adapter/src/: lib.rs  sqlx.rs  task_command_mock.rs  task_query_mock.rs
output_adapter/src/sqlx/: sqlx_task_command.rs  sqlx_task_query.rs
swagger/: Cargo.toml
swagger/public/swagger/: openapi.yaml  swagger-initializer.js
swagger/public/swagger/schemas/: CreateInput.yaml  CreateOutput.yaml  GetOneOutput.yaml  ListOutput.yaml  UpdateInput.yaml
swagger/src/: lib.rs
todo_list/: Cargo.toml
todo_list/src/: main.rs
