[package]
name = "input_adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
ulid = { version = "1.2.1", features = ["serde"] }
