[package]
name = "todo_list"
version = "0.1.0"
edition = "2024"

[dependencies]
input_adapter = { path = "../input_adapter" }
output_adapter = { path = "../output_adapter" }
domain = { path = "../domain" }
dotenvy = "0.15.7"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.99"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
sqlx = { version = "0.8.6",features = ["runtime-tokio", "tls-native-tls", "postgres", "derive", "uuid", "macros", "time", "json"]}